<resources>
    <string name="app_name">TwoActivities</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="item1">Cheese</string>
    <string name="item2">Rice</string>
    <string name="item3">Tomato</string>
    <string name="item4">Butter</string>
    <string name="item5">Chilli</string>
    <string name="item6">Banana</string>
    <string name="item7">grape</string>
    <string name="item8">Apple</string>
    <string name="item9">Tea</string>
    <string name="item10">Gas</string>
</resources>
