<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.rosa.shoppinglist.SEectivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:background="@android:color/background_light"
        android:onClick="addItem1"
        android:text="@string/item1" />;
    android:text="Cheese" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:background="@android:color/background_light"
        android:text="@string/item2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:background="@android:color/background_light"
        android:text="@string/item3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:background="@android:color/background_light"
        android:text="@string/item4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:background="@android:color/background_light"
        android:text="@string/item5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button1"
        android:layout_marginEnd="36dp"
        android:background="@android:color/background_light"
        android:text="@string/item6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button6"
        android:background="@android:color/background_light"
        android:text="@string/item7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button7"
        android:layout_below="@+id/button7"
        android:background="@android:color/background_light"
        android:text="@string/item8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button8"
        android:layout_below="@+id/button8"
        android:background="@android:color/background_light"
        android:text="@string/item9" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button9"
        android:layout_below="@+id/button9"
        android:background="@android:color/background_light"
        android:text="@string/item10" />

    <TextView
        android:id="@+id/menu_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button4"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:text="SIlahkan Pilih Menu Yang Di Inginkan"
        android:textAllCaps="false"
        android:textColor="@color/textView_color"
        android:textColorHighlight="@android:color/holo_blue_bright"
        android:textIsSelectable="false"
        android:textSize="21sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_marginEnd="43dp"
        android:layout_toStartOf="@+id/button7"
        app:srcCompat="@mipmap/ic_launcher" />
</RelativeLayout>
